--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FormProducto">
+    tools:context="com.example.Forms.FormProducto">
 
     <TextView
-        android:id="@+id/tx_fp_producto"
+        android:id="@+id/tx_fichacarta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -17,6 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tx_nomDepto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="Departamento"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tx_fichacarta" />
+
     <Switch
         android:id="@+id/switch1"
         android:layout_width="wrap_content"
@@ -24,19 +34,21 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="10dp"
         android:text="Visible"
-        app:layout_constraintStart_toEndOf="@+id/tx_fp_producto"
+        app:layout_constraintStart_toEndOf="@+id/tx_fichacarta"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/tx_nomDepto">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <ImageView
@@ -47,13 +59,13 @@
                 app:srcCompat="@drawable/platocomida" />
 
             <TextView
-                android:id="@+id/tx_pNombre"
+                android:id="@+id/tx_cNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nombre" />
 
             <EditText
-                android:id="@+id/et_pNombre"
+                android:id="@+id/et_aNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -115,56 +127,28 @@
                     app:srcCompat="@drawable/lapiz35" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tx_pDepartamento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Departamento" />
-
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="right"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tx_pDescDepartamento"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="14"
-                    android:text="TextView" />
-
-                <ImageButton
-                    android:id="@+id/btn_pDepartamento"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/lapiz35" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="right"
-                android:layout_marginTop="30dp">
-
 
                 <Button
-                    android:id="@+id/btn_pBorrar"
+                    android:id="@+id/btn_aBorrar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="BORRAR"
-                    android:layout_marginRight="10dp"/>
+                    android:layout_marginRight="10dp"
+                    android:text="BORRAR" />
 
                 <Button
-                    android:id="@+id/btn_pGuardar"
+                    android:id="@+id/btn_aGuardar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="GUARDAR"
+                    android:layout_marginRight="10dp"
                     android:backgroundTint="#00FF00"
-                    android:layout_marginRight="10dp"/>
+                    android:text="GUARDAR" />
 
             </LinearLayout>
 
