--- a/app/src/main/res/layout/activity_list_alergenos.xml
+++ b/app/src/main/res/layout/activity_list_alergenos.xml
@@ -24,7 +24,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/btn_laNuevo"
+        android:id="@+id/btn_listaNuevo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
