--- a/app/src/main/res/layout/activity_form_carta.xml
+++ b/app/src/main/res/layout/activity_form_carta.xml
@@ -35,7 +35,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_aNombre"
+            android:id="@+id/et_pNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_aNombre" />
+            app:layout_constraintTop_toBottomOf="@+id/et_pNombre" />
 
         <LinearLayout
             android:layout_width="match_parent"
