--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -34,7 +34,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_aNombre"
+            android:id="@+id/et_pNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_aNombre" />
+            app:layout_constraintTop_toBottomOf="@+id/et_pNombre" />
 
         <LinearLayout
             android:layout_width="match_parent"
