--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -65,7 +65,7 @@
                 android:text="Nombre" />
 
             <EditText
-                android:id="@+id/et_aNombre"
+                android:id="@+id/et_pNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
