--- a/app/src/main/res/layout/activity_form_carta.xml
+++ b/app/src/main/res/layout/activity_form_carta.xml
@@ -35,7 +35,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_pNombre"
+            android:id="@+id/et_dNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_pNombre" />
+            app:layout_constraintTop_toBottomOf="@+id/et_dNombre" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -84,7 +84,7 @@
 
 
             <Button
-                android:id="@+id/btn_aGuardar"
+                android:id="@+id/btn_dGuardar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
