--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -34,19 +34,16 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_pNombre"
+            android:id="@+id/et_dNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="AAA"
             android:inputType="textPersonName" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:gravity="right"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <TextView
@@ -63,18 +60,17 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:text="NUEVO" />
-
-
-
         </LinearLayout>
 
 
         <ListView
-            android:id="@+id/list_cDepartamentos"
+            android:id="@+id/list_prods"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_pNombre" />
+            android:layout_height="300dp"
+            app:layout_constraintTop_toBottomOf="@+id/tx_dListaProds">
+
+        </ListView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -85,7 +81,14 @@
 
 
             <Button
-                android:id="@+id/btn_aGuardar"
+                android:id="@+id/btn_dBorrar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="BORRAR" />
+
+            <Button
+                android:id="@+id/btn_dGuardar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
