--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -65,7 +65,7 @@
                 android:text="Nombre" />
 
             <EditText
-                android:id="@+id/et_pNombre"
+                android:id="@+id/et_dNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -143,7 +143,7 @@
                     android:text="BORRAR" />
 
                 <Button
-                    android:id="@+id/btn_aGuardar"
+                    android:id="@+id/btn_dGuardar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
