--- a/app/src/main/res/layout/activity_list_carta.xml
+++ b/app/src/main/res/layout/activity_list_carta.xml
@@ -5,7 +5,7 @@
     android:id="@+id/formcarta"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.Lists.ListCarta">
+    tools:context=".ListCarta">
 
     <TextView
         android:id="@+id/textView"
