--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,12 @@
             android:layout_height="wrap_content"
             android:text="CARTA" />
 
+        <Button
+            android:id="@+id/btnRestaurante"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RESTAURANTES" />
+
         <ImageView
             android:id="@+id/imageQR"
             android:layout_width="match_parent"
