--- a/app/src/main/res/layout/activity_form_alergenos.xml
+++ b/app/src/main/res/layout/activity_form_alergenos.xml
@@ -33,7 +33,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_dNombre"
+            android:id="@+id/t_cNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
