--- a/app/src/main/res/layout/activity_form_carta.xml
+++ b/app/src/main/res/layout/activity_form_carta.xml
@@ -35,7 +35,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_dNombre"
+            android:id="@+id/t_cNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -69,11 +69,11 @@
         </LinearLayout>
 
         <ListView
-            android:id="@+id/list_cDepartamentos"
+            android:id="@+id/lista_cDeps"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/et_dNombre" />
+            app:layout_constraintTop_toBottomOf="@+id/t_cNombre" />
 
         <LinearLayout
             android:layout_width="match_parent"
