--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -34,7 +34,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/et_dNombre"
+            android:id="@+id/t_cNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -70,7 +70,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tx_dListaProds">
 
         </ListView>
-
 
         <LinearLayout
             android:layout_width="match_parent"
