--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -65,7 +65,7 @@
                 android:text="Nombre" />
 
             <EditText
-                android:id="@+id/et_dNombre"
+                android:id="@+id/t_cNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -79,7 +79,7 @@
                 android:text="Descripción" />
 
             <EditText
-                android:id="@+id/et_pDescripcion"
+                android:id="@+id/t_pDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -93,7 +93,7 @@
                 android:text="Precio" />
 
             <EditText
-                android:id="@+id/et_pPrecio"
+                android:id="@+id/t_pPrecio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -111,13 +111,11 @@
                 android:layout_height="50dp"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/tx_pDescAlergenos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="18"
-                    android:text="TextView" />
+                <ListView
+                    android:id="@+id/list_pAls"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="14" />
 
                 <ImageButton
                     android:id="@+id/btn_pAlergenos"
