--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -62,7 +62,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnSave"
+                    android:id="@+id/btnAcceder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
