--- a/app/src/main/res/layout/activity_form_alergenos.xml
+++ b/app/src/main/res/layout/activity_form_alergenos.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.Forms.FormAlergenos">
 
     <TextView
-        android:id="@+id/tx_fichacarta"
+        android:id="@+id/tx1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -24,7 +24,7 @@
         android:layout_marginTop="20dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tx_fichacarta">
+        app:layout_constraintTop_toBottomOf="@+id/tx1">
 
         <TextView
             android:id="@+id/tx_cNombre"
@@ -33,7 +33,7 @@
             android:text="Nombre" />
 
         <EditText
-            android:id="@+id/t_cNombre"
+            android:id="@+id/t_pNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -49,14 +49,14 @@
 
 
             <Button
-                android:id="@+id/btn_aBorrar"
+                android:id="@+id/btn_selecImg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:text="BORRAR" />
 
             <Button
-                android:id="@+id/btn_dGuardar"
+                android:id="@+id/btnGuardarCarta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
