--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.Forms.FormProducto">
 
     <TextView
-        android:id="@+id/tx_fichacarta"
+        android:id="@+id/tx1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -25,7 +25,7 @@
         android:text="Departamento"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tx_fichacarta" />
+        app:layout_constraintTop_toBottomOf="@+id/tx1" />
 
     <Switch
         android:id="@+id/switch1"
@@ -34,7 +34,7 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="10dp"
         android:text="Visible"
-        app:layout_constraintStart_toEndOf="@+id/tx_fichacarta"
+        app:layout_constraintStart_toEndOf="@+id/tx1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
@@ -51,12 +51,25 @@
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/img_plato"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="250dp"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/platocomida" />
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imagen1"
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/platocomida" />
+
+                <ImageButton
+                    android:id="@+id/btn_pFoto"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="bottom|right"
+                    app:srcCompat="@drawable/lupa50" />
+
+            </FrameLayout>
 
             <TextView
                 android:id="@+id/tx_cNombre"
@@ -65,7 +78,7 @@
                 android:text="Nombre" />
 
             <EditText
-                android:id="@+id/t_cNombre"
+                android:id="@+id/t_pNombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -134,14 +147,14 @@
 
 
                 <Button
-                    android:id="@+id/btn_aBorrar"
+                    android:id="@+id/btn_selecImg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:text="BORRAR" />
 
                 <Button
-                    android:id="@+id/btn_dGuardar"
+                    android:id="@+id/btnGuardarCarta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -152,5 +165,14 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/framelayout_p1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="229dp"
+        tools:layout_editor_absoluteY="542dp">
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
