cruds terminados a falta de descargar imagen

--- a/app/src/main/res/layout/activity_form_producto.xml
+++ b/app/src/main/res/layout/activity_form_producto.xml
@@ -27,16 +27,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tx1" />
 
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="10dp"
-        android:text="Visible"
-        app:layout_constraintStart_toEndOf="@+id/tx1"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
@@ -58,7 +48,7 @@
                 <ImageView
                     android:id="@+id/imagen1"
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="160dp"
                     android:scaleType="centerCrop"
                     app:srcCompat="@drawable/platocomida" />
 
@@ -70,6 +60,14 @@
                     app:srcCompat="@drawable/lupa50" />
 
             </FrameLayout>
+
+            <Switch
+                android:id="@+id/switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="Visible" />
 
             <TextView
                 android:id="@+id/tx_cNombre"
@@ -119,15 +117,24 @@
                 android:layout_height="wrap_content"
                 android:text="Alérgenos e intolerancias" />
 
+            <FrameLayout
+                android:id="@+id/framelayout_p1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </FrameLayout>
+
             <LinearLayout
+                android:id="@+id/linear1"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:background="@android:color/holo_orange_light"
                 android:orientation="horizontal">
 
                 <ListView
                     android:id="@+id/list_pAls"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="75dp"
                     android:layout_weight="14" />
 
                 <ImageButton
@@ -141,7 +148,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:gravity="right"
                 android:orientation="horizontal">
 
@@ -165,14 +172,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <FrameLayout
-        android:id="@+id/framelayout_p1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="229dp"
-        tools:layout_editor_absoluteY="542dp">
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
