--- a/app/src/main/res/layout/activity_form_departamento.xml
+++ b/app/src/main/res/layout/activity_form_departamento.xml
@@ -23,12 +23,26 @@
             android:text="Ficha de departamento"
             android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/tx_departamento"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Nombre del departamento"
-            android:textSize="28dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tx_departamento"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nombre del departamento"
+                android:textSize="28dp" />
+
+            <ImageButton
+                android:id="@+id/btn_borrarDep"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|right"
+                android:backgroundTint="#A1A1A1"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+        </LinearLayout>
 
         <ListView
             android:id="@+id/lista_prods"
@@ -36,13 +50,22 @@
             android:layout_height="300dp"
             android:layout_marginTop="10dp" />
 
-        <Button
-            android:id="@+id/btn_nuevoprod"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="10dp"
-            android:text="NUEVO PRODUCTO" />
+            android:gravity="right"
+            android:orientation="horizontal">
+
+
+            <Button
+                android:id="@+id/btn_nuevoDep"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginRight="10dp"
+                android:text="NUEVO PRODUCTO" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
