--- a/app/src/main/res/layout/activity_form_restaurante.xml
+++ b/app/src/main/res/layout/activity_form_restaurante.xml
@@ -135,7 +135,7 @@
 
 
             <Button
-                android:id="@+id/btn_selecImg"
+                android:id="@+id/btn_borrarDep"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
