--- a/app/src/main/res/layout/fragment_acceso_qr.xml
+++ b/app/src/main/res/layout/fragment_acceso_qr.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameAccesoQR"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccesoQR">
@@ -28,6 +29,16 @@
             android:src="@drawable/imgscanqr"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+        <Button
+            android:id="@+id/btn_cartaTemp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:text="Carta"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView1" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
