--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="60dp">
 
     <RelativeLayout
         android:layout_width="0dip"
@@ -30,23 +30,23 @@
 
             <TextView
                 android:id="@+id/txNombre"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
+                android:layout_marginTop="1dp"
                 android:layout_weight="1"
                 android:inputType="numberDecimal"
                 android:text="TextView"
-                android:textSize="20dp"
+                android:textSize="14dp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/txANombre"
-                android:layout_width="wrap_content"
+                android:id="@+id/txDescrip"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
+                android:layout_marginTop="1dp"
+                android:layout_weight="5"
                 android:text="TextView"
-                android:textSize="20dp" />
+                android:textSize="8dp" />
         </LinearLayout>
 
     </RelativeLayout>
@@ -63,17 +63,12 @@
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/btnBorrarP"
+                android:id="@+id/btnPedir"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/papelera20" />
-
-            <ImageButton
-                android:id="@+id/btnEditP"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:srcCompat="@drawable/lapiz35" />
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                app:srcCompat="@android:drawable/ic_input_add" />
 
         </LinearLayout>
 
