--- a/app/src/main/res/layout/item_restaurante.xml
+++ b/app/src/main/res/layout/item_restaurante.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txANombre"
+        android:id="@+id/txDescrip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
