--- a/app/src/main/res/layout/activity_form_alergenos.xml
+++ b/app/src/main/res/layout/activity_form_alergenos.xml
@@ -17,11 +17,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/btn_borrarAl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|right"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="#A1A1A1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="35dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tx1">
@@ -40,37 +51,14 @@
             android:hint="AAA"
             android:inputType="textPersonName" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnGuardarAl"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:gravity="right"
-            android:orientation="horizontal">
-
-
-            <ImageButton
-                android:id="@+id/btn_backAls"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                app:srcCompat="?attr/homeAsUpIndicator" />
-
-            <ImageButton
-                android:id="@+id/btn_borrarDep"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#FF0000"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
-
-            <Button
-                android:id="@+id/btnGuardarCarta"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:backgroundTint="#2196F3"
-                android:text="GUARDAR" />
-
-        </LinearLayout>
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="10dp"
+            android:backgroundTint="#2196F3"
+            android:text="GUARDAR" />
 
     </LinearLayout>
 
